#+TITLE: Changelog
#+OPTIONS: H:10
#+OPTIONS: num:nil
#+OPTIONS: toc:2

* Unreleased

** Added

+ confirmation when quitting Emacs

** Changed

*** Xmobar

+ CPU display now refreshes every 5 seconds instead of every 1

+ now only shows hours and minutes in time

+ now uses Inconsolata font

** Fixed

+ xmobar not spawning when starting xmonad

* 0.9.0 - 2019-06-05

** Added

+ =git-clone-my= command for cloning personal repositories

*** Emacs

**** Org

+ automatic sorting of tags in Org by lexicographic ordering

+ =Inbox= capture now includes a =CREATED= property

+ support for refiling to any heading (in specific agenda
  files) that has a =category= tag

***** Agenda

+ agenda configuration for specific project types
  + short term projects
  + simple projects list

+ agenda view for weekly agenda

+ agenda views for specific types of next action
  + batch tasks
  + project actions
  + standalone (no project) actions

+ =org-super-agenda= configuration for next actions

*** Installer

+ install configuration for Common Lisp development

*** XMonad

+ new workspace bindings
  + =M-S-h= :: previous workspace
  + =M-S-l= :: next workspace
  + =M-[= :: shift current window to previous workspace, and
             switch to that workspace
  + =M-]= :: shift current window to next workspace, and
             switch to that workspace

+ new workspace configuration
  + =main=, =terminal=, =web=, and =other= workspaces

+ new tile layout configurations
  + tiled, mirror tiled, full

** Changed

*** Emacs

+ calendar sync warnings now include a timestamp

+ maximum length for =org-cliplink= descriptions is now 500

**** Org

+ timeless agenda entries are now positioned before the
  schedule for today

** Fixed

*** Emacs

+ ~my-jump-map~ bindings not getting bound if there were
  errors early on in config

+ ~my-org-refile-dwim~ complaining about ~org-capture-mode~
  not being previously loaded

* 0.8.0 - 2018-08-06

** Added

+ Initial XScreenSaver configuration
